--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<section class="todoapp">
 			<header class="header">
-				<h1>Tareas María</h1>
+				<h1>María</h1>
 				<input class="new-todo" placeholder="Ingresa una tarea princesa..." autofocus>
 			</header>
 			<section class="main">
@@ -33,7 +33,7 @@
 			</footer>
 		</section>
 		<footer class="info">
-			<p>Creado por tu novio Jhon Alexis</p>
+			<p>Creado por tu novio Jhon Alexis...</p>
 		</footer>     
 	</body>
 </html>
