--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
 			</footer>
 		</section>
 		<footer class="info">
-			<p>Creado por tu novio Jhon Alexis...</p>
-		</footer>     
+				<p>Creado por tu novio Jhon Alexis...</p>
+				<img id="heaert" src="./assets/heart.png" alt="">
+			
+</footer>     
 	</body>
 </html>
